# otus_12_homework

./: .travis.yml  CMakeLists.txt  README.md  commands.cpp  commands.h  consumer.h  consumer_file.cpp  consumer_file.h  consumer_out.cpp  consumer_out.h  event_processor.cpp  event_processor.h  main.cpp  producer.cpp  producer.h  server.cpp  server.h  session.cpp  session.h  techstack.md  techstack.yml
